--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bamboo
+DB_DATABASE=baipai_be
 DB_USERNAME=root
-DB_PASSWORD=P@ssw0rdComSci
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
